--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -470,6 +470,7 @@
         <script type="text/javascript" src="node_modules/mousetrap/mousetrap.js"></script>
 
         <script type="text/javascript" src="app/js/config.js"></script>
+        <script type="text/javascript" src="app/js/caches.js"></script>
         <script type="text/javascript" src="app/js/api.js"></script>
         <script type="text/javascript" src="app/js/controllers.js"></script>
         <script type="text/javascript" src="app/js/directives.js"></script>
