--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -467,6 +467,7 @@
         <script type="text/javascript" src="node_modules/angular-material/angular-material.js"></script>
         <script type="text/javascript" src="node_modules/mousetrap/mousetrap.js"></script>
 
+        <script type="text/javascript" src="app/js/models.js"></script>
         <script type="text/javascript" src="app/js/config.js"></script>
         <script type="text/javascript" src="app/js/caches.js"></script>
         <script type="text/javascript" src="app/js/api.js"></script>
