--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -49,6 +49,9 @@
                         <li my-show-admin>
                             <md-button my-click-broadcast="navigation-close" ui-sref="app.admin">Admin</md-button>
                         </li>
+                        <li my-show-admin>
+                            <md-button my-click-broadcast="navigation-close" href="dashboard" target="_blank">Hystrix Dashboard</md-button>
+                        </li>
                         <li>
                             <md-button my-click-broadcast="navigation-close" ui-sref="app.settings">Settings</md-button>
                         </li>
