Reconfigured Spring Security to allow better integration with single page application

--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -59,7 +59,7 @@
                             <md-button my-click-broadcast="navigation-close" ui-sref="app.settings">Settings</md-button>
                         </li>
                         <li>
-                            <md-button href="logout">logout</md-button>
+                            <md-button my-click-broadcast="logout">logout</md-button>
                         </li>
                     </ul>
                 </md-content>
