--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -17,7 +17,11 @@
 
         <script type="text/ng-template" id="SubscriptionTags" data-ignore="true">
             <md-sidenav layout="column" class="site-sidenav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-                <md-toolbar></md-toolbar>
+                <md-toolbar>
+                    <md-button class="md-icon-button" ng-hide="isInvisible('gt-md')" ng-click="showApplicationProperties()" aria-label="Menu">
+                        <md-icon md-font-library="material-icons">help</md-icon>
+                    </md-button>
+                </md-toolbar>
 
                 <md-content flex role="navigation">
                     <ul class="subscription-tag-menu">
@@ -549,6 +553,39 @@
                     <div>
                 </md-content>
             </div>
+        </script>
+
+        <script type="text/ng-template" id="ApplicationProperties" data-ignore="true">
+            <md-dialog aria-label="Mango (Fruit)">
+                <md-toolbar>
+                    <div class="md-toolbar-tools">
+                        <h2>About</h2>
+                        <span flex></span>
+                    </div>
+                </md-toolbar>
+                <md-dialog-content>
+                    <div class="md-dialog-content">
+                        <table>
+                            <tr>
+                                <td>Branch</td>
+                                <td>{{properties.git.branch}}</td>
+                            </tr>
+                            <tr>
+                                <td>Commit Id</td>
+                                <td>{{properties.git.commit.id}}</td>
+                            </tr>
+                            <tr>
+                                <td>Version</td>
+                                <td>{{properties.build.version}}</td>
+                            </tr>
+                            <tr>
+                                <td>Build Time</td>
+                                <td>{{properties.build.time}}</td>
+                            </tr>
+                        </table>
+                    </div>
+                </md-dialog-content>
+            </md-dialog>
         </script>
 
         <!-- build:js -->
