Replace Gulp with webpack

--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -2,41 +2,8 @@
 <html ng-app="myreader">
     <head>
         <title>MyReader</title>
-
-        <link rel="icon" type="image/gif" href="app/img/favicon.gif">
-
         <meta name="viewport" content="initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-        <!-- build:css -->
-        <link rel="stylesheet" type="text/css" media="screen" href="node_modules/angular-material/angular-material.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="app/css/mobile.css" />
-        <!-- endbuild -->
     </head>
-    <body layout="row" ui-view="body">
-        <!-- build:js -->
-        <script type="text/javascript" src="node_modules/angular/angular.js"></script>
-        <script type="text/javascript" src="node_modules/angular-animate/angular-animate.js"></script>
-        <script type="text/javascript" src="node_modules/angular-aria/angular-aria.js"></script>
-        <script type="text/javascript" src="node_modules/angular-sanitize/angular-sanitize.js"></script>
-        <script type="text/javascript" src="node_modules/angular-messages/angular-messages.js"></script>
-        <script type="text/javascript" src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-        <script type="text/javascript" src="node_modules/ui-router-extras/release/ct-ui-router-extras.js"></script>
-        <script type="text/javascript" src="node_modules/angular-cache/dist/angular-cache.js"></script>
-        <script type="text/javascript" src="node_modules/angular-hotkeys/build/hotkeys.js"></script>
-        <script type="text/javascript" src="node_modules/angular-local-storage/dist/angular-local-storage.js"></script>
-        <script type="text/javascript" src="node_modules/moment/moment.js"></script>
-        <script type="text/javascript" src="node_modules/angular-material/angular-material.js"></script>
-        <script type="text/javascript" src="node_modules/mousetrap/mousetrap.js"></script>
-
-        <script type="text/javascript" src="app/js/models.js"></script>
-        <script type="text/javascript" src="app/js/config.js"></script>
-        <script type="text/javascript" src="app/js/caches.js"></script>
-        <script type="text/javascript" src="app/js/api.js"></script>
-        <script type="text/javascript" src="app/js/controllers.js"></script>
-        <script type="text/javascript" src="app/js/directives.js"></script>
-        <script type="text/javascript" src="app/js/filters.js"></script>
-        <script type="text/javascript" src="app/js/services.js"></script>
-        <!-- endbuild -->
-    </body>
+    <body layout="row" ui-view="body"></body>
 </html>
