Replace Angular Material sidenav with custom implementation.

--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -5,5 +5,5 @@
         <meta name="viewport" content="initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
-    <body layout="row" ui-view="body"></body>
+    <body ui-view="body"></body>
 </html>
