PWA: Configure theme color.

--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -4,6 +4,7 @@
         <title>MyReader</title>
         <meta name="viewport" content="initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="theme-color" content="#3f51b5" />
     </head>
     <body ui-view="body"></body>
 </html>
