Disable page zoom.

--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myreader">
     <head>
         <title>MyReader</title>
-        <meta name="viewport" content="initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="theme-color" content="#3f51b5" />
     </head>
