--- a/myreader-frontend/src/index.html
+++ b/myreader-frontend/src/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html ng-app="myreader">
+<html>
     <head>
         <title>MyReader</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="theme-color" content="#3f51b5" />
     </head>
-    <body ui-view="body"></body>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
