chore: switch to Maven build system

--- a/myreader-frontend/public/index.html
+++ b/myreader-frontend/public/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head
-  data-build-version="<%= version %>"
-  data-build-commit-id="<%= commit %>"
->
+<head>
   <title>MyReader</title>
   <link rel="icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.png" />
