--- a/myreader-frontend/public/index.html
+++ b/myreader-frontend/public/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>MyReader</title>
   <link rel="icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="favicon.png" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="static/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta http-equiv="theme-color" content="#3f51b5"/>
+  <link rel="manifest" href="static/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
 </head>
 <body>
 <div id="root"></div>
